--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,18 +35,33 @@
   background: rgba(200,0,0,0.15);
 }
 
+/* Modals */
+.popover-backdrop {
+  background-color: rgba(0,0,0,0.35);
+}
 .popover-wrapper {
-  .list {
+  .list, .tip {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 2%;
     background: #fff;
     border: 1px solid #ddd;
     margin: 0 auto;
-    margin-top: 10%;
+    width: 95%;
     max-width: 500px;
+    box-shadow: 0 0 3px rgba(0,0,0,0.75);
+  }
+  .tip {
+    width: 90%;
   }
 }
-.popover-backdrop {
-  background: rgba(0,0,0,0.35);
+
+.platform-android {
+  .popover-backdrop {
+    background-color: rgba(0,0,0,0.35);
+  }
 }
 
 .item-divider {
