--- a/www/css/style.css
+++ b/www/css/style.css
@@ -28,16 +28,28 @@
   color: #c00;
   background: rgba(200, 0, 0, 0.15); }
 
-.popover-wrapper .list {
+/* Modals */
+.popover-backdrop {
+  background-color: rgba(0, 0, 0, 0.35); }
+
+.popover-wrapper .list, .popover-wrapper .tip {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 2%;
   background: #fff;
   border: 1px solid #ddd;
   margin: 0 auto;
-  margin-top: 10%;
-  max-width: 500px; }
+  width: 95%;
+  max-width: 500px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.75); }
 
-.popover-backdrop {
-  background: rgba(0, 0, 0, 0.35); }
+.popover-wrapper .tip {
+  width: 90%; }
+
+.platform-android .popover-backdrop {
+  background-color: rgba(0, 0, 0, 0.35); }
 
 .item-divider {
   padding-top: 14px;
