--- a/www/partials/main-app.html
+++ b/www/partials/main-app.html
@@ -1,18 +1,10 @@
-<div ng-show="alarm || warn" class="list alerts">
-    <div class="item item-icon-left alarm" ng-show="alarm && !hideAlarm">
-        <i class="icon ion-alert-circled"></i>
-        <i class="icon ion-trash-a" ng-click="hideAlarm = true"></i>
-        It looks like you've run overbudget.
-    </div>
-    <div class="item item-icon-left warn" ng-show="warn && !alarm && !hideWarn">
-        <i class="icon ion-information-circled"></i>
-        <i class="icon ion-trash-a" ng-click="hideWarn = true"></i>
-        It looks like you're at risk of going overbudget.
-    </div>
+<div ng-controller="notifyCtrl" class="list alerts">
+    <warning></warning>
+    <alarm></alarm>
 </div>
 <div class="list">
     <div ng-repeat="day in days">
-        <div class="item item-divider item-icon-right" ng-click="day.showContents = !day.showContents" ng-class="{ 'danger': day.balance < 0, 'warning': day.balance < 500 }">
+        <div class="item item-divider item-icon-right" ng-click="day.showContents = !day.showContents" ng-class="{ 'danger': day.balance < day.limit.alarm, 'warning': day.balance < day.limit.warning }">
             <i class="icon ion-chevron-down"></i>
             {{ day.date.toDateString() }}
             <span class="badge badge-assertive" ng-if="day.outgoing.length"><i class="ion-arrow-down-a"></i></span>
