--- a/www/css/style.css
+++ b/www/css/style.css
@@ -72,6 +72,12 @@ ion-content > div {
   top: 14px; }
   .item .badge + .badge {
     margin-right: 30px; }
+  .item .badge i {
+    font-size: 24px; }
+    .item .badge i.ion-arrow-graph-down-right {
+      color: #f00; }
+    .item .badge i, .item .badge i.ion-arrow-graph-up-right {
+      color: #090; }
 
 .item.balance {
   padding-top: 5px;
@@ -84,13 +90,13 @@ ion-content > div {
   padding: 10px;
   padding-left: 20px;
   background: rgba(127, 255, 127, 0.2);
-  border-left: 5px solid #fff; }
+  border-left: 5px solid #f0f0f0; }
 
 .item.bill {
   padding: 10px;
   padding-left: 20px;
   background: rgba(255, 127, 127, 0.2);
-  border-left: 5px solid #fff; }
+  border-left: 5px solid #f0f0f0; }
 
 .chart {
   width: 100%;
